# video-speed-changer

./: pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  processor.py
